feat(middleware): prometheus added
