# docs/swagger.yaml
@@ -130,6 +130,39 @@ definitions:
       pagination:
         $ref: '#/definitions/dto.Pagination'
     type: object
+  models.MenuTree:
+    properties:
+      actions:
+        items:
+          $ref: '#/definitions/models.MenuAction'
+        type: array
+      children:
+        $ref: '#/definitions/models.MenuTrees'
+      component:
+        type: string
+      hidden:
+        type: integer
+      icon:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      parent_id:
+        type: string
+      parent_path:
+        type: string
+      router:
+        type: string
+      sequence:
+        type: integer
+      status:
+        type: integer
+    type: object
+  models.MenuTrees:
+    items:
+      $ref: '#/definitions/models.MenuTree'
+    type: array
   models.Role:
     properties:
       created_at:
@@ -220,6 +253,19 @@ definitions:
     - full_name
     - status
     - username
+    type: object
+  models.UserInfo:
+    properties:
+      full_name:
+        type: string
+      roles:
+        items:
+          $ref: '#/definitions/models.Role'
+        type: array
+      user_id:
+        type: string
+      username:
+        type: string
     type: object
   models.UserQueryResult:
     properties:
@@ -1075,15 +1121,15 @@ paths:
         "200":
           description: ok
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
         "400":
           description: bad request
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
         "500":
           description: internal error
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
       security:
       - Authorization: []
       summary: SysRoutes
@@ -1097,15 +1143,20 @@ paths:
         "200":
           description: ok
           schema:
-            type: string
+            allOf:
+            - $ref: '#/definitions/echo_response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.UserInfo'
+              type: object
         "400":
           description: bad request
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
         "500":
           description: internal error
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
       security:
       - Authorization: []
       summary: UserInfo
@@ -1126,15 +1177,15 @@ paths:
         "200":
           description: ok
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
         "400":
           description: bad request
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
         "500":
           description: internal error
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
       summary: UserLogin
       tags:
       - Public
@@ -1146,7 +1197,7 @@ paths:
         "200":
           description: success
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
       security:
       - Authorization: []
       summary: UserLogout
@@ -1160,15 +1211,22 @@ paths:
         "200":
           description: ok
           schema:
-            type: string
+            allOf:
+            - $ref: '#/definitions/echo_response.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.MenuTree'
+                  type: array
+              type: object
         "400":
           description: bad request
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
         "500":
           description: internal error
           schema:
-            type: string
+            $ref: '#/definitions/echo_response.Response'
       security:
       - Authorization: []
       summary: UserMenuTree
